--- a/public/inicio/styles.css
+++ b/public/inicio/styles.css
@@ -10,11 +10,14 @@ body {
     font-family: "Raleway", sans-serif; /*fuentes de texto */
 }
 header {
-    background-image: linear-gradient(-20deg, #5670c5 0%, #21d4fd 100%);
-    height: 750px;
+    background: #4CA1AF;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #99d7e2, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    height:500px;
     padding: 48px;
     width: 100%;
 }
+
 nav {
     position: fixed;
     top: 20px;
@@ -23,10 +26,10 @@ nav {
 nav a {
     display: inline-block;
     color: #000000;
-    font-weight: 300;
+    font-weight:600;
     text-decoration: none;
     margin-top: 30px;
-    border: 1px solid #000000;
+    border: 4px solid #000000;
     width: 150px;
     border-radius: 100px;
     text-align: center;
@@ -57,16 +60,47 @@ nav a {
     font-size: 80px;
     animation: moverDerecha 2.5s ease-in;
 }
-.letras h2 {
+.letras h3 {
     font-size: 30px;
     animation: moverIzquierda 2.5s ease-in;
 }
-
-.svg-hero {
-    height: 100px; /*alto de la onda*/
-    width: 100%; /*ancho de las ondas*/
-    position:absolute; /*pocionamiento de las ondas */
-    bottom: 550px;
+/*efectos de movimiento del header*/
+@keyframes moverIzquierda {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes moverDerecha {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes arriba {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+.hero-wave{
+width: 100%;
+height: 90px;
+background: #4CA1AF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #99d7e2, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 /*estilos generales*/
@@ -121,7 +155,7 @@ nav a {
     background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
     padding: 12px 18px;
     border-radius: 30px;
-    color: rgb(255, 255, 255);
+    color: #ffffff;
 }
 
 /*carrusel de imagenes*/
@@ -131,6 +165,7 @@ nav a {
     height: 600px; /*alto de recuadro del degrade */
 }
 .carrusel h1{
+      font-family: 'Fugaz One', cursive;
     text-align: center;
 }
 .wrapper {
@@ -144,9 +179,8 @@ nav a {
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
-    transform: rotateY( 300deg) translateZ(360px);
-    animation: animate 300s steps(9000, end) infinite;/*velocidad del giro y recuadros */
-    background: #cafd13;
+    transform: rotateY( -300deg) translateZ(-360px);
+    animation: animate 800s steps(200000, end) infinite;/*velocidad del giro y recuadros */
 }
 .single-img {
     position:fixed;
@@ -189,7 +223,7 @@ nav a {
 }
 @keyframes animate {
     from {
-        transform: rotateY(1000deg);
+        transform: rotateY(10000deg);
     }
     to {
         transform: rotateY(0deg);
@@ -310,9 +344,11 @@ h2::after{
     width: 50px;
     font-size: 50px;
     color: #ffffff;
+    text-align: center;
 }
 .hover-galeria p {
     color: #ffffff;
+    text-align: center;
 }
 .imagen-port:hover .hover-galeria {
     transform: scale(1);
@@ -491,8 +527,9 @@ h2::after{
     -ms-box-sizing: border-box;
     box-sizing: border-box;
 }
+/*moviento olas footer*/
 svg path {
-    animation: pathAnim 12s;
+    animation: pathAnim 7s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     opacity: 1000;
@@ -596,33 +633,3 @@ svg path:nth-child(4) {
     }
 }
 
-@keyframes moverIzquierda {
-    0% {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-@keyframes moverDerecha {
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-@keyframes arriba {
-    0% {
-        opacity: 0;
-        transform: translateY(100px);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
