--- a/public/inicio/styles.css
+++ b/public/inicio/styles.css
@@ -158,14 +158,16 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     color: #ffffff;
 }
 
-/*carrusel de imagenes*/
+
+/*carrusel2*/
 .carrusel {
     /*estilo derecuadro*/
     background-image: linear-gradient(to top,#1d46622a  0%,  #72aab72d 100%);
     height: 600px; /*alto de recuadro del degrade */
 }
-.carrusel h1{
-      font-family: 'Fugaz One', cursive;
+.carrusel h2{
+    font-weight: 700;
+    font-size: 40px;
     text-align: center;
 }
 .wrapper {
@@ -174,79 +176,17 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     margin: 10px 360px;/*posicion carrusel en cuanto a linea azul*/
     perspective: 1500px;
 }
-.img-area {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transform: rotateY( -360deg) translateZ(-300px);
-    animation: animate 150s steps(200000, end) infinite;/*velocidad del giro y recuadros */
-}
-.single-img {
-    position:fixed;
-    top: 30px;
-    left: 100px;
-    width: 200px;
-    height: 40px;
-}
-.single-img img {
-    width: 300px;
-    height: 200px;
-    border: 5px solid #000000;
-    border-radius: 20px;
-}
-.single-img.img-1 {
-    transform: rotateY(0deg) translateZ(600px);
-}
-.single-img.img-2 {
-    transform: rotateY(45deg) translateZ(600px);
-}
-.single-img.img-3 {
-    transform: rotateY(90deg) translateZ(600px);
-}
-.single-img.img-4 {
-    transform: rotateY(135deg) translateZ(600px);
-}
-.single-img.img-5 {
-    transform: rotateY(180deg) translateZ(600px);
-}
-.single-img.img-6 {
-    transform: rotateY(225deg) translateZ(600px);
-}
-.single-img.img-7 {
-    transform: rotateY(270deg) translateZ(600px);
-}
-.single-img.img-8 {
-    transform: rotateY(315deg) translateZ(600px);
-}
-.single-img.img-9 {
-    transform: rotateY(360deg) translateZ(600px);
-}
-@keyframes animate {
-    from {
-        transform: rotateY(0deg);
-    }
-    to {
-        transform: rotateY(360deg);
-    }
-}
-
-
-
-
-
-/*carrusel2*/
 .contentt-all{
     width: 210px;
     margin: auto;
-    perspective: 1000px;
+    perspective: 800px;
     position: relative;
     margin-top: 50px;
 }
 .contentt-carrusel{
     width: 100%;
     position: absolute;
-    animation: rotar 30s infinite linear;
+    animation: rotar 70s infinite linear;
     transform-style: preserve-3d;
 }
 .contentt-carrusel:hover{
@@ -255,7 +195,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
 }
 .contentt-carrusel figure{
     width: 100%;
-    height: 120px;
+    height: 138px;
     overflow: hidden;
     position: absolute;
     box-shadow: 0 0 0 0 black;
@@ -264,26 +204,26 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     border-radius: 30px;
 }
 .contentt-carrusel figure:hover{
-    box-shadow: 0 0 20px 0 black;
+    box-shadow: 0 0 20px 3px black;
     transition:all 300ms;
 }
 
-.contentt-carrusel figure:nth-child(1)  {transform: rotateY(0deg)   translateZ(450px);}
-.contentt-carrusel figure:nth-child(2)  {transform: rotateY(40deg)  translateZ(450px);}
-.contentt-carrusel figure:nth-child(3)  {transform: rotateY(80deg)  translateZ(450px);}
-.contentt-carrusel figure:nth-child(4)  {transform: rotateY(120deg) translateZ(450px);}
-.contentt-carrusel figure:nth-child(5)  {transform: rotateY(160deg) translateZ(450px);}
-.contentt-carrusel figure:nth-child(6)  {transform: rotateY(200deg) translateZ(450px);}
-.contentt-carrusel figure:nth-child(7)  {transform: rotateY(240deg) translateZ(450px);}
-.contentt-carrusel figure:nth-child(8)  {transform: rotateY(280deg) translateZ(450px);}
-.contentt-carrusel figure:nth-child(9)  {transform: rotateY(320deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(1)  {transform: rotateY(36deg)  translateZ(450px);}
+.contentt-carrusel figure:nth-child(2)  {transform: rotateY(72deg)  translateZ(450px);}
+.contentt-carrusel figure:nth-child(3)  {transform: rotateY(108deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(4)  {transform: rotateY(144deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(5)  {transform: rotateY(180deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(6)  {transform: rotateY(216deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(7)  {transform: rotateY(252deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(8)  {transform: rotateY(288deg) translateZ(450px);}
+.contentt-carrusel figure:nth-child(9)  {transform: rotateY(324deg) translateZ(450px);}
 .contentt-carrusel figure:nth-child(10) {transform: rotateY(360deg) translateZ(450px);}
 .contentt-carrusel img{
     width: 100%;
 }
 .contentt-carrusel img:hover{
     transform: scale(1.1);
-    transition: all 200ms;
+    transition: all 300ms;
 }
 @keyframes rotar{
     from{
@@ -294,53 +234,6 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
 }
 
 
-
-
-
-
-
-
-
-/*.contentt-all{
-    width: 210px;
-    margin: auto;
-    perspective: 1000px;
-    position: relative;
-    margin-top: 50px;
-}
-.contentt-carrusel{
-    width: 100%;
-    position: absolute;
-    animation: rotar 10s infinite linear;
-    transform-style: preserve-3d;
-}
-.contentt-carrusel figure{
-    width: 100%;
-    height: 100px;
-    overflow: hidden;
-    position: absolute;
-}
-.contentt-carrusel figure:nth-child(1){transform: rotateY(0deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(2){transform: rotateY(40deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(3){transform: rotateY(80deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(4){transform: rotateY(120deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(5){transform: rotateY(160deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(6){transform: rotateY(200deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(7){transform: rotateY(240deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(8){transform: rotateY(280deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(9){transform: rotateY(320deg); transform: translateZ(300px);}
-.contentt-carrusel figure:nth-child(10){transform: rotateY(360deg); transform: translateZ(300px);}
-
-.contentt-carrusel img{
-    width: 100%;
-}
-@keyframes rotar{
-    from{
-        transform: rotateY(0deg);
-    }to{
-        transform: rotateY(360deg);
-    }
-}*/
 
 
 /*7 funciones de recursos humanos*/
@@ -375,6 +268,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     justify-content: space-evenly; /*espacio equitativo entra cada uno */
     flex-wrap: wrap; /*si sobrepasa el elemento que se ponga uno debajo del otro */
 }
+
 .card {
     width: 30%;
     text-align: center;
@@ -388,6 +282,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5); /*color del borde*/
     transform: scale(1.05); /*tamaño del efecto*/
     cursor: pointer; /*efecto del cursor*/
+    background: #e2f1fa;
 }
 .card i {
     margin: 30px 0 20px 0; /*espacio de icono en margen*/
@@ -399,6 +294,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     font-size: 15px; /*tamaño de parrafo*/
     margin-bottom: 40px; /*distancia del boton con referencia al techo*/
 }
+
 
 /*galeria*/
 h2{
@@ -473,7 +369,7 @@ h2::after{
     justify-content: space-evenly;
 }
 .cardss .card1{
-    background-image: linear-gradient(to top, #cc208e 0%, #6713d2 100%);
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     display: flex;
     width: 30%;
     height: 200px;
@@ -492,7 +388,7 @@ h2::after{
 }
 .cardss .card1 > .contenido-textos-card{
     width: 60%;
-    color: #ffffff;
+    color: #000000;
 }
 .cardss .card1 > .contenido-textos-card p{
     font-weight: 300;
@@ -502,7 +398,7 @@ h2::after{
 .container-footer {
     width: 50;
     padding: 10px 0;
-    background: rgba(0, 0, 0, 0.932);
+    background: #d1dde2;
     margin: top 10px;
 }
 .container-footer footer {
@@ -562,12 +458,12 @@ h2::after{
     margin-top: 10px;
     border: none;
     height: 2px;
-    background: #2e2d2dde;
+    background: #9a9a9cde;
 }
 .container-footer h6 {
     text-align: center;
     margin-top: 10px;
-    color: rgb(46, 44, 44);
+    color: rgba(46, 44, 44, 0.287);
     font-weight: 500px;
 }
 
