--- a/public/css/app.css
+++ b/public/css/app.css
@@ -99,6 +99,17 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+#eliminar{
+
+    padding(1, 1, 1, 1);
+    color: rgb(236, 13, 13);
+    border-color: #e3342f;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    text-align: left;
+    font-size: 22px;
+    
+}
 
 abbr[title],
 abbr[data-original-title] {
@@ -2310,7 +2321,7 @@ select.form-control:focus::-ms-value {
     height: calc(1.5em + 1rem + 2px);
     padding: 0.5rem 1rem;
     font-size: 0.9rem;
-   
+
     border-radius: 0.7rem;
     background-color: rgba(250, 237, 227, 0.9);
     outline-offset: 3px;
@@ -2320,7 +2331,7 @@ select.form-control:focus::-ms-value {
     height: calc(1.5em + 1rem + 2px);
     padding: 0.5rem 1rem;
     font-size:  0.9rem;
-   
+
     border-radius: 0.7rem;
     background-color: rgba(216, 216, 216, 0.9);
     outline-offset: 3px;
@@ -2332,7 +2343,7 @@ select.form-control:focus::-ms-value {
     width: calc(1.5em + 16rem + 10px);
     padding: 0.5rem 1rem;
     font-size: 16px;
-   
+
     border-radius: 0.7rem;
     background-color: rgba(242, 246, 246, 0.972);
     outline-offset: 3px;
@@ -2343,7 +2354,7 @@ select.form-control:focus::-ms-value {
     width: calc(1.5em + 5rem + 10px);
     padding: 0.5rem 1rem;
     font-size: 16px;
-   
+
     border-radius: 0.7rem;
     background-color: rgba(242, 246, 246, 0.972);
     outline-offset: 3px;
@@ -2354,7 +2365,7 @@ select.form-control:focus::-ms-value {
     width: calc(1.5em + 8rem + 10px);
     padding: 0.5rem 1rem;
     font-size: 16px;
-   
+
     border-radius: 0.7rem;
     background-color: rgba(242, 246, 246, 0.972);
     outline-offset: 3px;
@@ -2445,7 +2456,7 @@ select.form-control:focus::-ms-value {
     width: calc(1.5em + 5rem + 22px);
     padding: 0.5rem 1rem;
     font-size: 16px;
-   
+
     border-radius: 0.7rem;
     background-color: rgba(255, 255, 255, 0.972);
     outline-offset: 3px;
@@ -11085,5 +11096,7 @@ a.text-dark:focus {
   color: #060700;
 }
 
+
 }
+
 
