--- a/public/inicio/styles.css
+++ b/public/inicio/styles.css
@@ -152,7 +152,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     /*diseño de los botones de envio */
     display: inline-block;
     text-decoration: none;
-    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+    background-image: linear-gradient(to right, #4bd2df 0%, #c4f4f6 100%);
     padding: 12px 18px;
     border-radius: 30px;
     color: #ffffff;
@@ -200,7 +200,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
     position: absolute;
     box-shadow: 0 0 0 0 black;
     transition:all 300ms;
-    border: 5px solid #000000;
+    border: 1px solid #77b5b8;
     border-radius: 30px;
 }
 .contentt-carrusel figure:hover{
@@ -249,8 +249,8 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
 
 /*Info*/
 .info{
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-    color: #1d4662;
+    background-image: linear-gradient(120deg, #42b5e2 0%, #258b92 100%);
+    color: #ced9db;
 }
 .info h1{
     text-align: center;
@@ -285,7 +285,7 @@ background: linear-gradient(to right, #81d1df, #4CA1AF); /* W3C, IE 10+/ Edge, F
 }
 .card i {
     margin: 30px 0 20px 0; /*espacio de icono en margen*/
-    color: #4047ac; /*color icono*/
+    color: #47c2de; /*color icono*/
     font-size: 50px; /*tamaño icono*/
 }
 .card p {
@@ -302,7 +302,7 @@ h2{
     margin-top: 20px;
 }
 h2::after{
-    background: darkblue;
+    background:#4ba8bd;
     width: 100%;
     content:'' ;
     height: 6px;
@@ -368,7 +368,7 @@ h2::after{
     justify-content: space-evenly;
 }
 .cardss .card1{
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    background-image: linear-gradient(120deg, #6bc7cf 0%, #4dc3d8 100%);
     display: flex;
     width: 30%;
     height: 200px;
@@ -376,6 +376,9 @@ h2::after{
     justify-content: space-evenly;
     border-radius: 5px;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.6);
+    border: lightslategrey;
+    
+
 }
 .cardss .card1 img{
     width: 100px;
